--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="node_modules/ion-rangeslider/css/ion.rangeSlider.css">
     <link rel="stylesheet" href="node_modules/ion-rangeslider/css/ion.rangeSlider.skinCustom.css">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="node_modules/animate.css/animate.css">
     <!--Essential OnLoad Javascript-->
 
 </head>
 <body>
     <!-- Navigation
     ================================================== -->
-    <div class="navbar-wrapper">
+    <div class="navbar-wrapper  navbar-fixed-top">
         <div class="container">
 
-            <nav class="navbar navbar-inverse navbar-static-top">
+            <nav class="navbar navbar-inverse ">
                 <div class="container">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -34,25 +36,40 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#"><img src="img/logo_white.png" alt=""></a>
+                        <a class="navbar-brand" href="#"><img src="img/logo_color.png" class="logo" alt=""></a>
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
                             <li class="active"><a href="#">Home</a></li>
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#contact">Contact</a></li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products <span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
+                                    <li><a href="#">Home Improvement Loans</a></li>
+                                    <li><a href="#">Market Trader Loans</a></li>
+                                    <li><a href="#">Business Loans</a></li>
+                                    <li><a href="#">Savings Accounts</a></li>
                                     <li role="separator" class="divider"></li>
-                                    <li class="dropdown-header">Nav header</li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li><a href="#">One more separated link</a></li>
+                                    <li class="dropdown-header">Tools</li>
+                                    <li><a href="#">Loan Calculator</a></li>
+                                    <li><a href="#">Online Loan Application</a></li>
                                 </ul>
                             </li>
+                            <li><a href="#">About Us</a></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Corporate <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Partners</a></li>
+                                    <li><a href="#">Shareholders</a></li>
+                                    <li><a href="#"></a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li class="dropdown-header">Publications</li>
+                                    <li><a href="#">Annual Report 2015</a></li>
+                                    <li><a href="#">Older Reports</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">News</a></li>
+                            <li><a href="#">Contact</a></li>
+
                         </ul>
                     </div>
                 </div>
@@ -115,7 +132,7 @@
 
     <!-- CONTENT
     ====================================================-->
-    <div class="container">
+    <div class="container wow fadeIn">
             <div class="row content product loan-calc">
 
                 <div class="col-md-12 text-center">
@@ -167,7 +184,7 @@
     <h2>Our Products</h2>
 </div>
         <div class="row">
-            <div class=" col-xs-6 col-md-3">
+            <div class=" col-xs-6 col-md-3 wow slideInLeft">
                 <a href="#">
                     <div class="product">
                         <div class=" image">
@@ -178,7 +195,7 @@
                     </div>
                    </div>
                 </a></div>
-            <div class="col-xs-6 col-md-3 ">
+            <div class="col-xs-6 col-md-3 wow slideInUp">
                 <a href="#">
                     <div class="product">
                         <div class="image">
@@ -189,7 +206,7 @@
                     </div>
                    </div>
                 </a></div>
-            <div class="col-xs-6 col-md-3">
+            <div class="col-xs-6 col-md-3 wow slideInUp">
                 <a href="#">
                     <div class="product">
                         <div class="image">
@@ -200,7 +217,7 @@
                     </div>
                    </div>
                 </a></div>
-            <div class="col-xs-6 col-md-3">
+            <div class="col-xs-6 col-md-3 wow slideInRight">
                 <a href="#">
                     <div class="product">
                         <div class="image">
@@ -214,7 +231,7 @@
         </div>
 
         <div class="row pad-top-60">
-            <div class="col-md-8">
+            <div class="col-md-8 wow fadeInLeft">
                 <h2>Welcome to the Entrepreneurs' Financial Centre</h2>
                 <h3>Your home of Quick Finance</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lectus enim, auctor a venenatis eget, malesuada sit amet nisi. Etiam accumsan nibh sit amet pharetra porttitor. Cras vitae est faucibus, dictum mi in, maximus mauris. Curabitur ac turpis eu mi feugiat placerat in in sem. Proin quis finibus tellus. Nulla a arcu id elit pharetra facilisis. Vestibulum ac eleifend sapien. Integer malesuada congue aliquet. Nulla facilisis lorem eros, sed facilisis libero dignissim sit amet. Donec ullamcorper urna a diam molestie, quis volutpat massa lacinia.</p>
@@ -225,7 +242,7 @@
                     <button type="button" class="btn btn-default btn-lg">Large button</button>
                 </p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 wow slideInUp">
                 <img src="img/home_partners.png" alt="EFC's Partners" class="img-responsive center-block">
             </div>
         </div>
@@ -249,23 +266,45 @@
     <footer>
         <div class="container">
             <div class="section-one row">
-            <div class="col-md-8">
-                <h4>Company Info</h4>
+            <div class="col-md-4">
+                <h4>Corporate Info</h4>
                 <ul>
                     <li><a href="#">Home</a></li>
-                </ul>
-                <ul>
-                    <li><a href="">Site Map</a></li>
-                </ul>
-                <ul>
+                    <li><a href="">Reports</a></li>
                     <li><a href="">Press</a></li>
-                </ul>
-                <ul>
                     <li><a href="">Contact Us</a></li>
                 </ul>
             </div>
+                <div class="col-md-4">
+                    <h4>More</h4>
+                    <ul>
+                        <li><a href="">Site Map</a></li>
+                        <li><a href="">Contact Us</a></li>
+                    </ul>
+                    <ul class="social-links list-inline">
+                        <li>
+                            <a href="https://goo.gl/ffMvzl" target="_blank">
+                            <i class="fa fa-facebook-square fa-2x"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://goo.gl/DgaeKG" target="_blank">
+                                <i class="fa fa-twitter-square fa-2x"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://goo.gl/RxnCfu" target="_blank">
+                                <i class="fa fa-google-plus-square fa-2x"></i>
+                            </a>
+                        </li> </ul>
+                </div>
             <div class="col-md-4">
-                <icon ></icon>
+                <h4>EFC Uganda Ltd</h4>
+                <p>
+                    <a href="#">2nd Floor - Acacia Place, Plot 1 Acacia Avenue, <br>Kololo, Kampala. </a><br>
+                    Tel.: <a href="tel://+39 059 776 865">+39 059 776 865</a> <br>
+                    Fax: +39 059 776 881<br>
+                    E-mail: <a href="mailto:info@crit-research.it">info@crit-research.it</a><br>
+                </p>
             </div>
         </div>
         </div>
@@ -285,7 +324,26 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/umd/carousel.js"></script>
     <script src="node_modules/ion-rangeslider/js/ion.rangeSlider.js"></script>
-
+    <!--Scrolling transforming navbar-->
+    <script src="node_modules/desandro-classie/classie.js"></script>
+    <script>
+        function init() {
+            window.addEventListener('scroll', function(e){
+                var distanceY = window.pageYOffset || document.documentElement.scrollTop,
+                        shrinkOn = 300,
+                        header = document.querySelector(".navbar-fixed-top");
+                if (distanceY > shrinkOn) {
+                    classie.add(header,"navbar-scroll");
+                } else {
+                    if (classie.has(header,"navbar-scroll")) {
+                        classie.remove(header,"navbar-scroll");
+                    }
+                }
+            });
+        }
+        window.onload = init();
+    </script>
+    <!--Loan calculator-->
     <script>
         $(document).ready(function () {
             var $range1 = $("#range_money"),
@@ -372,6 +430,51 @@
 
 
         })
+    </script>
+    <!--Page scrolling animations-->
+    <script src="node_modules/wow.js/dist/wow.min.js"></script>
+    <script>new WOW().init();</script>
+    <script>
+        $(document).ready(function () {
+            $(document).on("scroll", onScroll);
+
+            //smoothscroll
+            $('a[href^="#"]').on('click', function (e) {
+                e.preventDefault();
+                $(document).off("scroll");
+
+                $('a').each(function () {
+                    $(this).removeClass('active');
+                })
+                $(this).addClass('active');
+
+                var target = this.hash,
+                        menu = target;
+                $target = $(target);
+                $('html, body').stop().animate({
+                    'scrollTop': $target.offset().top+2
+                }, 500, 'swing', function () {
+                    window.location.hash = target;
+                    $(document).on("scroll", onScroll);
+                });
+            });
+        });
+
+        //Highlight link for anchor when div is in focus
+        function onScroll(event){
+            var scrollPos = $(document).scrollTop();
+            $('#menu-center a').each(function () {
+                var currLink = $(this);
+                var refElement = $(currLink.attr("href"));
+                if (refElement.position().top <= scrollPos && refElement.position().top + refElement.height() > scrollPos) {
+                    $('#menu-center ul li a').removeClass("active");
+                    currLink.addClass("active");
+                }
+                else{
+                    currLink.removeClass("active");
+                }
+            });
+        }
     </script>
 </body>
 </html>
